database insertion and visualization working

--- a/SQLiteDrawer/app/src/main/res/layout/fragment_insert.xml
+++ b/SQLiteDrawer/app/src/main/res/layout/fragment_insert.xml
@@ -44,7 +44,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/_quantity" />
+            android:hint="@string/_quantity"
+            android:inputType="number"/>
     </android.support.design.widget.TextInputLayout>
     
     <Button
