--- a/EvaluacionFinal7/app/src/main/res/layout/layout_dialog_newuser.xml
+++ b/EvaluacionFinal7/app/src/main/res/layout/layout_dialog_newuser.xml
@@ -15,7 +15,8 @@
             android:id="@+id/editText_loginDialog_userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/dialogSignup_editHintUserName" />
+            android:hint="@string/dialogSignup_editHintUserName"
+            android:maxLength="15"/>
     
     </android.support.design.widget.TextInputLayout>
     
@@ -29,7 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/dialogSignup_editHintPassword"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:maxLength="20"/>
     
     </android.support.design.widget.TextInputLayout>
     
@@ -42,7 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/dialogSignup_editHintConfPassword"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:maxLength="20"/>
     
     </android.support.design.widget.TextInputLayout>
 
