--- a/EvaluacionFinal7/app/src/main/res/layout/activity_main.xml
+++ b/EvaluacionFinal7/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,14 @@
     <include layout="@layout/content_main" />
     
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:src="@android:drawable/ic_input_add"
         android:tint="@color/icons"
-        app:fabSize="normal" />
+        app:fabSize="normal"
+        android:onClick="onClickFab"/>
 
 </android.support.design.widget.CoordinatorLayout>
