--- a/EvaluacionFinal7/app/src/main/res/layout/content_login.xml
+++ b/EvaluacionFinal7/app/src/main/res/layout/content_login.xml
@@ -59,10 +59,14 @@
         app:layout_constraintVertical_chainStyle="packed">
         
         <EditText
+            android:id="@+id/editText_login_userName"
+            android:nextFocusDown="@+id/editText_login_password"
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_editHintUserName"
-            android:maxLength="15"/>
+            android:maxLength="15"
+            android:maxLines="1"/>
     
     </android.support.design.widget.TextInputLayout>
     
@@ -76,6 +80,7 @@
         app:layout_constraintTop_toBottomOf="@id/til_login_userName">
         
         <EditText
+            android:id="@+id/editText_login_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_editHintPassword"
