--- a/EvaluacionFinal7/app/src/main/res/layout/content_main.xml
+++ b/EvaluacionFinal7/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_main">
     
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_main_searchUser"
+        android:id="@+id/til_main_searchDonor"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
         
         <EditText
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/selector_main_clear"
@@ -35,6 +36,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/til_main_searchUser" />
+        app:layout_constraintTop_toBottomOf="@id/til_main_searchDonor" />
 
 </android.support.constraint.ConstraintLayout>
