--- a/EvaluacionFinal7/app/src/main/res/values/arrays.xml
+++ b/EvaluacionFinal7/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="blood_type">
-        <item>Tipo de sangre</item>
+        <item>@string/_blood_type</item>
         <item>A</item>
         <item>B</item>
         <item>O</item>
@@ -9,7 +9,7 @@
     </string-array>
     
     <string-array name="rh_type">
-        <item>Rh</item>
+        <item>@string/_rh</item>
         <item>+</item>
         <item>-</item>
     </string-array>
