--- a/EvaluacionFinal7/app/src/main/res/layout/layout_dialog_newdonor.xml
+++ b/EvaluacionFinal7/app/src/main/res/layout/layout_dialog_newdonor.xml
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/dialogDonor_editHintName"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textCapWords"
             android:maxLength="15" />
     
     </android.support.design.widget.TextInputLayout>
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/dialogDonor_editHintLasName"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textCapWords"
             android:maxLength="15" />
     
     </android.support.design.widget.TextInputLayout>
